--- a/index.html
+++ b/index.html
@@ -6,5 +6,17 @@
 </head>
 <body>
 <p>Hello !</p>
+
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QGDDSE5CEN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QGDDSE5CEN');
+</script>
+    
 </body>
 </html>
