--- a/app.html
+++ b/app.html
@@ -2,8 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <style>
+#quizcontainer{
+    display: grid;
+    grid-template-rows: auto auto auto;
+
+}
+
+        .quizbox {
+            border: 1px solid black;
+            padding: 10px;
+            margin-bottom: 20px;
+            width: 25%;
+        }
+
+        .quizboxheader {
+            background-color: cyan;
+            padding: 5px;
+            font-weight: bold;
+            border-bottom: 1px solid black;
+        }
+
+
+
+
+
+
+
+
+    </style>
     <title>Quiz list</title>
-    <script src="js/app.js"></script>
 </head>
 <body>
 <header>
@@ -14,6 +42,7 @@
 
 
 </div>
+<script src="js/app.js"></script>
 
 <footer></footer>
 </body>
