Submit button disables itself properly on submission (avoids issue where spamming it kept calling the API and creating more quizboxes with the same 3 quizzes). Fixed error where the input textbox objects were being passed to the API instead of their values. Still need to implement validation.

--- a/app.html
+++ b/app.html
@@ -35,12 +35,12 @@
 <form method=post onsubmit="formInputValidator(event)">
     <p>
         <label>Player Name
-            <input type="text" name="pname" id="pname" required minlength="3" maxlength="10"></label>
+            <input type="text" name="pname" id="pname" placeholder="Player name here" required minlength="3" maxlength="10"></label>
     </p>
     <p>
-        <label>Name of the app used <input type="text" name="appname" id="appname" minlength="3" maxlength="30"></label>
+        <label>Name of the app used <input type="text" name="appname" placeholder="App name here" id="appname" minlength="3" maxlength="30"></label>
     </p>
-    <input type="submit">
+    <input type="submit" value="Submit" id="submitbutton">
 
 </form>
 
