--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
                 <P>Twitter: https://twitter.com/TreasureAVRS</P>
                 <p>Instagram: https://www.instagram.com/treasureavrs/?hl=en</p>
             </H4>
+            <a class="twitter" href="https://twitter.com/TreasureAVRS">Twitter</a>
+        <a class="insta" href="https://www.instagram.com/treasureavrs/?hl=en">Instagram</a>
         </div>
         <div class="grid-item">
             <div class="Names">
