--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <h1>Treasure Hunt</h1>
         </div>
         <div class="links">
-        <a class="app" href="app.html">App</a>
-        <a class="que" href="questions.html">Questtions</a>
+            <!--     <a class="app" href="app.html">App</a>
+               <a class="que" href="question.html">Questions</a> TO VASILIS: O xrhsths PREPEI prwta na phainei sto app.html gia na 3ekinhsei treasure hunts, an valoume koumpi gia na piainei sta questions prepei na einai energo MONO an exei active treasure hunt.-->
          </div>
         </div>
     </header>
