Changed the style of the front page, corrected some errors in the code, some lexical errors -- not the final version

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
          </div>
         </div>
     </header>
-    <P>we aim to create a fun treasere hunt app for everyone </P>
+    <P> <i> We aim to create a fun treasure hunt app for everyone </i> </P>
 <div class="buttonc">
     <a href="app.html"><button>Start</button></a>
 </div>
