--- a/app.html
+++ b/app.html
@@ -23,8 +23,8 @@
             border-bottom: 1px solid black;
         }
 
-
     </style>
+    <link rel='stylesheet' href='style.css'>
     <title>Quiz list</title>
 </head>
 <body>
@@ -49,6 +49,29 @@
 <script src="js/cookies.js"></script>
 <script src="js/app.js"></script>
 
-<footer></footer>
+<footer>
+    <div class="grid-container">
+        <div class="grid-item">
+            <H4>
+                Social Media
+            </H4>
+            <a class="twitter" href="https://twitter.com/TreasureAVRS">Twitter</a>
+            <a class="insta" href="https://www.instagram.com/treasureavrs/?hl=en">Instagram</a>
+        </div>
+        <div class="grid-item">
+            <div class="Names">
+                <h1 class="header">Names:</h1>
+                <P>vasilii </P>
+                <P>alex </P>
+                <P>robert </P>
+                <P>nicolas </P><br>
+
+
+
+            </div>
+        </div>
+
+    </div>
+</footer>
 </body>
 </html>
