QR code implementation started

--- a/question.html
+++ b/question.html
@@ -5,6 +5,19 @@
     <title>Question</title>
 </head>
 <body>
+<header>
+    <div class="head">
+        <div class="name">
+            <h1>Treasure Hunt</h1>
+        </div>
+        <div class="links">
+            <a class="app" href="app.html">App</a>
+            <a class="que" href="question.html">Questions</a>
+            
+
+        </div>
+    </div>
+</header>
 <script src="js/cookies.js"></script>
 <h1 id="questionNo"></h1>
 
@@ -47,6 +60,11 @@
 </div>
 
 <input style="display: none" type="button" id="skipbutton" value="Skip Question?" onclick="skipper()">
+
+
+
+
+
 
 <div style='display: flex' id="scoreboardiv"></div>
 
