--- a/question.html
+++ b/question.html
@@ -3,19 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>Question</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="js/instascan.min"></script>
+    <script src="js/QR_Reader.js"></script>
+
 </head>
 <body>
 <header>
-    <div class="head">
-        <div class="name">
             <h1>Treasure Hunt</h1>
-        </div>
-        <div class="links">
-            <a class="app" href="app.html">App</a>
-            <a class="que" href="question.html">Questions</a>
-            
 
-        </div>
+<input type="button" value="Press here to open QR Reader!" class="buttonc" onclick="start_scan()">
+    <div id="popup" style="display: none">
+        <video id="preview"></video>
+        <div id="scanned_content"></div>
+    </div>
+
+
+
+
+    <div class="links">
+        <a class="app" href="app.html">App</a>
+        <a class="que" href="question.html">Questions</a>
     </div>
 </header>
 <script src="js/cookies.js"></script>
