--- a/question.html
+++ b/question.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Question</title>
     <link rel="stylesheet" href="style.css">
-    <script src="js/instascan.min"></script>
+    <script src="js/instascan.min.js"></script>
     <script src="js/QR_Reader.js"></script>
 
 </head>
