QR code reader fully implemented incl. stop button

--- a/index.html
+++ b/index.html
@@ -6,15 +6,20 @@
     <meta charset="UTF-8">
     <title>NEW FILE</title>
 </head>
+
 <body>
-    <header>
-        <div class="head">
-        <div class="name">
-            <h1>Treasure Hunt</h1>
-        </div>
-        <div class="links">
-            <!--     <a class="app" href="app.html">App</a>
-               <a class="que" href="question.html">Questions</a> TO VASILIS: O xrhsths PREPEI prwta na phainei sto app.html gia na 3ekinhsei treasure hunts, an valoume koumpi gia na piainei sta questions prepei na einai energo MONO an exei active treasure hunt.-->
+<div w3-include-html="header.html"></div>
+
+
+
+  <header>
+      <div class="head">
+      <div class="name">
+          <h1>Treasure Hunt</h1>
+      </div>
+      <div class="links">
+               <a class="app" href="app.html">App</a>
+             <a class="que" href="question.html">Questions</a>
          </div>
         </div>
     </header>
