Location function implemented.

--- a/app.html
+++ b/app.html
@@ -31,15 +31,21 @@
 <header>
     <h1>Welcome to the Quiz list!</h1>
 </header>
+<div>
 <h2>Please provide your team's data so you can start a quiz!</h2>
 <form method=post onsubmit="formInputValidator(event)">
     <p>
         <label>Player Name
             <input type="text" name="pname" id="pname" placeholder="Player name here" required minlength="3" maxlength="10"></label>
     </p>
+    <br>
+    <br>
     <input type="submit" value="Submit" id="submitbutton">
+    <br>
+    <br>
 
 </form>
+</div>
 
 
 <div id="quizcontainer">
@@ -64,7 +70,7 @@
                 <P>vasilii </P>
                 <P>alex </P>
                 <P>robert </P>
-                <P>nicolas </P><br>
+                <P>nikolas </P><br>
 
 
 
