TEST COMMIT: QR_Reader Camera Cycling

--- a/question.html
+++ b/question.html
@@ -15,7 +15,7 @@
         <video id="preview"></video>
         <div id="scanned_content"></div>
         <input type="button" value="Press here to close the QR reader" onclick="stop_scan()">
-
+        <input type="button" value="Press here to cycle cameras" onclick="camera_cycle()">
     </div>
 
 
