Location function implemented.

--- a/app.html
+++ b/app.html
@@ -14,13 +14,15 @@
             padding: 10px;
             margin-bottom: 20px;
             width: 25%;
+            color: #000000;
         }
 
         .quizboxheader {
-            background-color: cyan;
+            background-color: #422604;
             padding: 5px;
             font-weight: bold;
             border-bottom: 1px solid black;
+            color: white;
         }
 
     </style>
@@ -61,16 +63,22 @@
             <H4>
                 Social Media
             </H4>
-            <a class="twitter" href="https://twitter.com/TreasureAVRS">Twitter</a>
-            <a class="insta" href="https://www.instagram.com/treasureavrs/?hl=en">Instagram</a>
+            <a href="https://twitter.com/TreasureAVRS" target="_blank">
+                <img src="twitterlogo.png" alt="Twitter" class="twitter" style="width: 100px; height: 100px;">
+            </a>
+            <a href="https://www.instagram.com/treasureavrs/?hl=en">
+                <img src="instagram.png" alt="insta" class="insta" style="width: 100px; height: 100px;">
+            </a>
+
+
         </div>
         <div class="grid-item">
             <div class="Names">
                 <h1 class="header">Names:</h1>
-                <P>vasilii </P>
-                <P>alex </P>
-                <P>robert </P>
-                <P>nikolas </P><br>
+                <P>Vasilii </P>
+                <P>Alex </P>
+                <P>Maxim </P>
+                <P>Nikolas </P><br>
 
 
 
