--- a/index.html
+++ b/index.html
@@ -52,8 +52,14 @@
             <H4>
                 Social Media
             </H4>
-            <a class="twitter" href="https://twitter.com/TreasureAVRS">Twitter</a>
-        <a class="insta" href="https://www.instagram.com/treasureavrs/?hl=en">Instagram</a>
+            <a href="https://twitter.com/TreasureAVRS" target="_blank">
+                <img src="twitterlogo.png" alt="Twitter" class="twitter" style="width: 100px; height: 100px;">
+            </a>
+            <a href="https://www.instagram.com/treasureavrs/?hl=en">
+                <img src="instagram.png" alt="insta" class="insta" style="width: 100px; height: 100px;">
+            </a>
+
+
         </div>
         <div class="grid-item">
             <div class="Names">
