--- a/question.html
+++ b/question.html
@@ -8,16 +8,13 @@
 </head>
 <body>
 <header>
-            <h1>Treasure Hunt</h1>
-
-<input type="button" value="Press here to open QR Reader!" onclick="start_scan()">
+    <h1>Treasure Hunt</h1>
+    <input id="startbutton" type="button" value="QR Reader" onclick="start_scan()">
     <div id="popup" style="display:none">
         <video id="preview"></video>
         <div id="scanned_content"></div>
         <input type="button" value="Press here to close the QR reader" onclick="stop_scan()">
-
     </div>
-
 
     <div class="links">
         <a class="app" href="app.html">App</a>
@@ -25,48 +22,48 @@
     </div>
 
 </header>
+
 <script src="js/cookies.js"></script>
-<h1 id="questionNo"></h1>
-
-<p id="questionText"></p>
-<div id="textAnswerBlock" style="display:none">
-    <form>
-    <input type="text" id="textAnswerField" required>
-    <input type="submit" value="Submit" onclick="answer('TEXT')"/>
-    </form>
-</div>
-
-<div id="numAnswerBlock" style="display:none">
-    <form>
-    <input type="number" id="numAnswerField" required>
-    <input type="submit" value="Submit" onclick="answer('NUMERIC')"/>
-    </form>
-</div>
-
-<div id="intAnswerBlock" style="display:none">
-    <form>
-    <input type="number" id="intAnswerField" required >
-    <input type="submit" value="Submit" onclick="answer('INTEGER')"/>
-    </form>
-</div>
-
-<div id="boolAnswerBlock" style="display:none">
-    <input type="button" value="True" onclick="answer('BOOLEAN','true')">
-    <input type="button" value="False" onclick="answer('BOOLEAN','false')">
-
-</div>
-
-<div id="mcqAnswerBlock" style="display:none">
-    <div style=" display:grid; grid-template-columns:auto auto ">
-        <input type="button" value="A" onclick="answer('MCQ','A')">
-        <input type="button" value="B" onclick="answer('MCQ','B')">
-        <input type="button" value="C" onclick="answer('MCQ','C')">
-        <input type="button" value="D" onclick="answer('MCQ','D')">
-
+<<div class="container">
+    <div class="pirate">
+        <img src="piracy-royalty-free-stock-photography-illustration-cartoon-pirates-76b90a338461d8aa8c9ddb7e02bcb818.png" alt="Pirate" width="20" height="20">
+        <div class="box">
+            <h1 id="questionNo"></h1>
+            <p id="questionText"></p>
+            <div id="textAnswerBlock" style="display:none">
+                <form>
+                    <input type="text" id="textAnswerField" required>
+                    <input type="submit" value="Submit" class="submit-button" onclick="answer('TEXT')"/>
+                </form>
+            </div>
+            <div id="numAnswerBlock" class="answer-block" style="display:none">
+                <form>
+                    <input type="number" id="numAnswerField" class="answer-field" required>
+                    <input type="submit" value="Submit" class="submit-button" onclick="answer('NUMERIC')"/>
+                </form>
+            </div>
+            <div id="intAnswerBlock" class="answer-block" style="display:none">
+                <form>
+                    <input type="number" id="intAnswerField" class="answer-field" required >
+                    <input type="submit" value="Submit" class="submit-button" onclick="answer('INTEGER')"/>
+                </form>
+            </div>
+            <div id="boolAnswerBlock" class="bool-answer-buttons" style="display:none">
+                <input type="button" value="True" onclick="answer('BOOLEAN','true')">
+                <input type="button" value="False" onclick="answer('BOOLEAN','false')">
+            </div>
+            <div id="mcqAnswerBlock" style="display:none">
+                <div style="display: grid; grid-template-columns: auto auto ">
+                    <input type="button" value="A" class="mcq-answer-buttons" onclick="answer('MCQ','A')">
+                    <input type="button" value="B" class="mcq-answer-buttons" onclick="answer('MCQ','B')">
+                    <input type="button" value="C" class="mcq-answer-buttons" onclick="answer('MCQ','C')">
+                    <input type="button" value="D" class="mcq-answer-buttons" onclick="answer('MCQ','D')">
+                </div>
+            </div>
+            <input style="display: none" type="button" id="skipbutton" value="Skip Question?" onclick="skipper()">
+        </div>
     </div>
 </div>
-
-<input style="display: none" type="button" id="skipbutton" value="Skip Question?" onclick="skipper()">
 
 
 
@@ -87,6 +84,36 @@
 <script src="js/questions.js"></script>
 <script src="js/instascan.min.js"></script>
 <script src="js/QR_Reader.js"></script>
+<footer>
+    <div class="grid-container">
+        <div class="grid-item">
+            <H4>
+                Social Media
+            </H4>
+            <a href="https://twitter.com/TreasureAVRS" target="_blank">
+                <img src="twitterlogo.png" alt="Twitter" class="twitter" style="width: 100px; height: 100px;">
+            </a>
+            <a href="https://www.instagram.com/treasureavrs/?hl=en">
+                <img src="instagram.png" alt="insta" class="insta" style="width: 100px; height: 100px;">
+            </a>
+
+
+        </div>
+        <div class="grid-item">
+            <div class="Names">
+                <h1 class="header">Names:</h1>
+                <P>Vasilii </P>
+                <P>Alex </P>
+                <P>Maxim </P>
+                <P>Nikolas </P><br>
+
+
+
+            </div>
+        </div>
+
+    </div>
+</footer>
 
 
 </body>
