add start page button and fix some style

--- a/app.html
+++ b/app.html
@@ -31,10 +31,14 @@
 </head>
 <body>
 <header>
-    <h1>Welcome to the Quiz list!</h1>
+    <h1 class="welcome">Welcome to the Quiz list!</h1>
+    <div class="links">
+        <a class="app" href="index.html">Start Page</a>
+
+    </div>
 </header>
 <div>
-<h2>Please provide your team's data so you can start a quiz!</h2>
+<h2 class="please">Please provide your team's data so you can start a quiz!</h2>
 <form method=post onsubmit="formInputValidator(event)">
     <p>
         <label>Player Name
