--- a/question.html
+++ b/question.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header>
-    <h1>Treasure Hunt</h1>
+    <h1 class="slogan">Treasure Hunt</h1>
     <input id="startbutton" type="button" value="QR Reader" onclick="start_scan()">
     <div id="popup" style="display:none">
         <video id="preview"></video>
@@ -18,13 +18,13 @@
 
     <div class="links">
         <a class="app" href="app.html">App</a>
-        <a class="que" href="question.html">Questions</a>
+        <a class="que" href="index.html">Start Page</a>
     </div>
 
 </header>
 
 <script src="js/cookies.js"></script>
-<<div class="container">
+<div class="container">
     <div class="pirate">
         <img src="piracy-royalty-free-stock-photography-illustration-cartoon-pirates-76b90a338461d8aa8c9ddb7e02bcb818.png" alt="Pirate" width="20" height="20">
         <div class="box">
