--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 Social Media
             </H4>
             <a href="https://twitter.com/TreasureAVRS" target="_blank">
-                <img src="twitterlogo.png" alt="Twitter" class="twitter" style="width: 100px; height: 100px;">
+                <img src="twitterlogo.png" alt="Twitter" class="twitter_icon" style="width: 100px; height: 100px;">
             </a>
             <a href="https://www.instagram.com/treasureavrs/?hl=en">
                 <img src="instagram.png" alt="insta" class="insta" style="width: 100px; height: 100px;">
