--- a/app.html
+++ b/app.html
@@ -2,39 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <style>
-        #quizcontainer {
-            display: grid;
-            grid-template-rows: auto auto auto;
-
-        }
-
-        .quizbox {
-            border: 1px solid black;
-            padding: 10px;
-            margin-bottom: 20px;
-            width: 25%;
-            color: #000000;
-        }
-
-        .quizboxheader {
-            background-color: #422604;
-            padding: 5px;
-            font-weight: bold;
-            border-bottom: 1px solid black;
-            color: white;
-        }
-
-    </style>
     <link rel='stylesheet' href='style.css'>
+
     <title>Quiz list</title>
 </head>
 <body>
 <header>
     <h1 class="welcome">Welcome to the Quiz list!</h1>
     <div class="links">
-        <a class="app" href="index.html">Start Page</a>
-
+        <a href="app.html">App</a>
+        <a id="questpagelink" href="question.html">Questions</a>
+        <a href="index.html">Start Page</a>
     </div>
 </header>
 <div>
@@ -58,8 +36,6 @@
 
 
 </div>
-<script src="js/cookies.js"></script>
-<script src="js/app.js"></script>
 
 <footer>
     <div class="grid-container">
@@ -91,5 +67,8 @@
 
     </div>
 </footer>
+<script src="js/cookies.js"></script>
+<script src="js/app.js"></script>
+
 </body>
 </html>
