--- a/question.html
+++ b/question.html
@@ -5,6 +5,7 @@
     <title>Question</title>
     <link rel="stylesheet" href="style.css">
 
+
 </head>
 <body>
 <header>
@@ -17,16 +18,17 @@
     </div>
 
     <div class="links">
-        <a class="app" href="app.html">App</a>
-        <a class="que" href="index.html">Start Page</a>
+        <a href="app.html">App</a>
+        <a id="questpagelink" href="question.html">Questions</a>
+        <a href="index.html">Start Page</a>
     </div>
 
 </header>
 
-<script src="js/cookies.js"></script>
 <div class="container">
     <div class="pirate">
-        <img src="piracy-royalty-free-stock-photography-illustration-cartoon-pirates-76b90a338461d8aa8c9ddb7e02bcb818.png" alt="Pirate" width="20" height="20">
+        <img src="piracy-royalty-free-stock-photography-illustration-cartoon-pirates-76b90a338461d8aa8c9ddb7e02bcb818.png"
+             alt="Pirate" width="20" height="20">
         <div class="box">
             <h1 id="questionNo"></h1>
             <p id="questionText"></p>
@@ -44,7 +46,7 @@
             </div>
             <div id="intAnswerBlock" class="answer-block" style="display:none">
                 <form>
-                    <input type="number" id="intAnswerField" class="answer-field" required >
+                    <input type="number" id="intAnswerField" class="answer-field" required>
                     <input type="submit" value="Submit" class="submit-button" onclick="answer('INTEGER')"/>
                 </form>
             </div>
@@ -66,10 +68,6 @@
 </div>
 
 
-
-
-
-
 <div style='display: flex' id="scoreboardiv"></div>
 
 <h3 id="playerscoreheading"></h3>
@@ -79,11 +77,6 @@
 </div>
 
 
-
-
-<script src="js/questions.js"></script>
-<script src="js/instascan.min.js"></script>
-<script src="js/QR_Reader.js"></script>
 <footer>
     <div class="grid-container">
         <div class="grid-item">
@@ -108,12 +101,16 @@
                 <P>Nikolas </P><br>
 
 
-
             </div>
         </div>
 
     </div>
 </footer>
+
+<script src="js/cookies.js"></script>
+<script src="js/questions.js"></script>
+<script src="js/instascan.min.js"></script>
+<script src="js/QR_Reader.js"></script>
 
 
 </body>
