question button disabling still needs work. QR camera button cycling enabled and styled.

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <img src="twitterlogo.png" alt="Twitter" class="twitter_icon" style="width: 100px; height: 100px;">
             </a>
             <a href="https://www.instagram.com/treasureavrs/?hl=en">
-                <img src="instagram.png" alt="insta" class="insta" style="width: 100px; height: 100px;">
+                <img src="instagram.png" alt="instagram" class="insta" style="width: 100px; height: 100px;">
             </a>
 
 
@@ -137,8 +137,7 @@
                 <P>Vasilii </P>
                 <P>Alex </P>
                 <P>Maxim </P>
-                <P>Nikolas </P><br>
-
+                <P>Nikolas </P>
 
             </div>
         </div>
