General file tidying up v2

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="html/style.css">
 
 <head>
     <meta charset="UTF-8">
@@ -18,15 +18,15 @@
             <h1>Treasure Hunt</h1>
         </div>
         <div class="links">
-            <a href="app.html">App</a>
-            <a id="questpagelink" href="question.html">Questions</a>
-            <a href="index.html">Start Page</a>
+            <a href="html/app.html">App</a>
+            <a id="questpagelink" href="html/question.html">Questions</a>
+            <a href="html/index.html">Start Page</a>
         </div>
     </div>
 </header>
 <p><i> We aim to create a fun treasure hunt app for everyone </i></p>
 <div class="buttonc">
-    <a href="app.html">
+    <a href="html/app.html">
         <button>Start</button>
     </a>
 </div>
@@ -123,10 +123,10 @@
                 Social Media
             </H4>
             <a href="https://twitter.com/TreasureAVRS" target="_blank">
-                <img src="../resources/twitterlogo.png" alt="Twitter" class="twitter_icon" style="width: 100px; height: 100px;">
+                <img src="resources/twitterlogo.png" alt="Twitter" class="twitter_icon" style="width: 100px; height: 100px;">
             </a>
             <a href="https://www.instagram.com/treasureavrs/?hl=en">
-                <img src="../resources/instagram.png" alt="instagram" class="insta" style="width: 100px; height: 100px;">
+                <img src="resources/instagram.png" alt="instagram" class="insta" style="width: 100px; height: 100px;">
             </a>
 
 
@@ -145,6 +145,6 @@
     </div>
 </footer>
 </body>
-<script src="../js/cookies.js"></script>
+<script src="js/cookies.js"></script>
 
 </html>
