scoreboard styling done

--- a/html/question.html
+++ b/html/question.html
@@ -72,9 +72,8 @@
 <div style='display: flex' id="scoreboardiv"></div>
 
 <h3 id="playerscoreheading"></h3>
-<h1>Scoreboard</h1>
+<h1 id="scoreboardivheading">Scoreboard</h1>
 <div id="innerscoreboardiv" style="border:solid black 1px;   display: grid">
-
 </div>
 
 
