R_Reader should work now

--- a/html/question.html
+++ b/html/question.html
@@ -21,7 +21,8 @@
     <div class="links">
         <a href="app.html">App</a>
         <a id="questpagelink" href="question.html">Questions</a>
-        <a href="index.html">Start Page</a>
+        <a href="../index.html">Start Page</a>
+        <a id= scoreboardlink href="scoreboard.html">Scoreboard for active quest</a>
     </div>
 
 </header>
