--- a/html/app.html
+++ b/html/app.html
@@ -12,7 +12,7 @@
     <div class="links">
         <a href="app.html">App</a>
         <a id="questpagelink" href="question.html">Questions</a>
-        <a href="index.html">Start Page</a>
+        <a href="../index.html">Start Page</a>
     </div>
 </header>
 <div>
