--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="links">
             <a href="html/app.html">App</a>
             <a id="questpagelink" href="html/question.html">Questions</a>
-            <a href="html/index.html">Start Page</a>
+            <a href="index.html">Start Page</a>
         </div>
     </div>
 </header>
